--- a/themes/programmers-paradise/style.css
+++ b/themes/programmers-paradise/style.css
@@ -119,16 +119,18 @@ hr {
   align-items: center;
 
   height: 5.75rem;
-  padding: 1.5rem 0;
-  margin: 0 2rem;
+  padding: 1.5rem 2rem;
+  margin: 0;
 
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
 
   z-index: 100;
   background-color: transparent;
+  border-bottom: 1px solid black;
+  transition: all .5s;
 }
 
 .desktop-nav-container nav {
