adds acf field to header and refactors control files

--- a/themes/programmers-paradise/templates/parts/header.twig
+++ b/themes/programmers-paradise/templates/parts/header.twig
@@ -10,10 +10,10 @@
 </head>
 
 <body>
-  <header id="pp-global-header" class="pp-global-header {{ invertHeaderColor ? 'header-inverted' : '' }}">
+  <header id="pp-global-header" class="pp-global-header {{ post.meta('invert_header_color') ? 'header-inverted' : '' }}">
     <a href="{{ site.url }}" class="pp-global-header-logo-container">
       <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="512.000000pt" height="512.000000pt" viewBox="0 0 512.000000 512.000000" preserveAspectRatio="xMidYMid meet">
-        <g id="nav-logo" class="{{ invertHeaderColor ? 'header-inverted' : '' }}" transform="translate(0.000000,512.000000) scale(0.100000,-0.100000)" fill="#000" stroke="none">
+        <g id="nav-logo" class="{{ post.meta('invert_header_color') ? 'header-inverted' : '' }}" transform="translate(0.000000,512.000000) scale(0.100000,-0.100000)" fill="#000" stroke="none">
           <path d="M1822 5050 c-265 -56 -486 -367 -547 -770 -18 -112 -19 -337 -4 -446
               80 -577 471 -929 834 -750 161 79 292 248 374 479 135 383 94 860 -101 1184
               -33 55 -143 183 -157 183 -5 0 -42 -114 -85 -253 l-76 -254 23 -54 c74 -168
